--- a/angular_laravel_task/sampath/client/assets/css/main.css
+++ b/angular_laravel_task/sampath/client/assets/css/main.css
@@ -2,3 +2,31 @@
 * {
   font-family: "Inter", sans-serif;
 }
+
+.text-white-important {
+  color: white !important;
+}
+
+.skeleton-loader {
+  width: 100%;
+  height: 15px;
+  display: block;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 80%), lightgray;
+  background-repeat: repeat-y;
+  background-size: 50px 500px;
+  background-position: 0 0;
+  -webkit-animation: shine 1s infinite;
+          animation: shine 1s infinite;
+}
+
+@-webkit-keyframes shine {
+  to {
+    background-position: 100% 0, 0 0;
+  }
+}
+
+@keyframes shine {
+  to {
+    background-position: 100% 0, 0 0;
+  }
+}
