--- a/employee_earnings_deductions_task/client/views/menuItems/employeeMaster.html
+++ b/employee_earnings_deductions_task/client/views/menuItems/employeeMaster.html
@@ -1,14 +1,36 @@
-<div class="employeeMaster">
+<div id="employeeMaster" ng-controller="employeeMasterController">
     <h6>Employee Master</h6>
     <hr />
     <table class="table table-bordered">
         <thead>
             <tr>
                 <th>Name</th>
+                <th>Department</th>
                 <th>Designation</th>
-                <th>Salary</th>
+                <th>Emp Code</th>
                 <th>Action</th>
             </tr>
         </thead>
+        <tbody>
+            <tr ng-repeat="employee in employees">
+                <td>{{employee.name}}</td>
+                <td>{{employee.department}}</td>
+                <td>{{employee.designation}}</td>
+                <td>{{employee.employee_code}}</td>
+                <td>
+                    <i role="button" class="fas fa-eye"></i>
+                </td>
+            </tr>
+            <tr ng-if="loading">
+                <td><span class="skeleton-loader"></span></td>
+                <td><span class="skeleton-loader"></span></td>
+                <td><span class="skeleton-loader"></span></td>
+                <td><span class="skeleton-loader"></span></td>
+                <td><span class="skeleton-loader"></span></td>
+            </tr>
+        </tbody>
     </table>
+</div>
+<div id="viewEmployee">
+    
 </div>
