--- a/employee_earnings_deductions_task/client/views/module.html
+++ b/employee_earnings_deductions_task/client/views/module.html
@@ -10,6 +10,9 @@
                     {{menuItem.name}}
                 </a>
             </li>
+            <li class="list-item" ng-if="loading">
+                <span class="skeleton-loader"></span>
+            </li>
         </ul>
     </div>
     <div class="body p-3">
@@ -28,5 +31,27 @@
     .body {
         margin-left: 250px;
         width: calc(100% - 250px);
+    }
+    .skeleton-loader {
+        width: 100%;
+        height: 15px;
+        display: block;
+        background: linear-gradient(
+                to right,
+                rgba(255, 255, 255, 0),
+                rgba(255, 255, 255, 0.5) 50%,
+                rgba(255, 255, 255, 0) 80%
+            ),
+            lightgray;
+        background-repeat: repeat-y;
+        background-size: 50px 500px;
+        background-position: 0 0;
+        animation: shine 1s infinite;
+    }
+
+    @keyframes shine {
+        to {
+            background-position: 100% 0;
+        }
     }
 </style>
