--- a/other_bills_task/client/views/addAgency.html
+++ b/other_bills_task/client/views/addAgency.html
@@ -59,7 +59,7 @@
                             type="text"
                             class="form-control"
                             id="agencyName"
-                            ng-model="agencyName"
+                            ng-model="addAgency.name"
                         />
                         <p
                             class="text-danger"
@@ -84,7 +84,7 @@
                             type="text"
                             class="form-control"
                             id="bankAcNo"
-                            ng-model="bankAcNo"
+                            ng-model="addAgency.accountNumber"
                         />
                         <p
                             class="text-danger"
@@ -109,7 +109,7 @@
                             type="text"
                             class="form-control"
                             id="confirmBankAcNo"
-                            ng-model="confirmBankAcNo"
+                            ng-model="addAgency.confirmAccountNumber"
                         />
                         <p
                             class="text-danger"
@@ -132,7 +132,7 @@
                             type="text"
                             class="form-control"
                             id="gstNumber"
-                            ng-model="gstNumber"
+                            ng-model="addAgency.gstNo"
                         />
                         <p
                             class="text-danger"
@@ -158,15 +158,18 @@
                                     type="text"
                                     class="form-control"
                                     id="ifscCode"
-                                    ng-model="ifscCode"
+                                    ng-model="addAgency.ifscCode"
                                 />
-                                <button class="btn btn-dark searchBtn ms-2">
+                                <button
+                                    ng-click="getIfscCodeDetails(addAgency.ifscCode)"
+                                    class="btn btn-dark searchBtn ms-2"
+                                >
                                     Search
                                 </button>
                             </div>
                             <p
                                 class="text-danger"
-                                ng-repeat="error in errors.ifscCode"
+                                ng-repeat="error in ifscCodeErrors"
                             >
                                 {{error}}
                             </p>
@@ -179,8 +182,12 @@
                             <span class="fw-semibold"> Bank Name </span>
                         </div>
                         <div class="col-12 col-md-8">
-                            <p class="m-0" ng-if="bankName">{{bankName}}</p>
-                            <p class="m-0" ng-if="!bankName">-</p>
+                            <p class="m-0" ng-if="ifscCodeDetails.bank_name">
+                                {{ifscCodeDetails.bank_name}}
+                            </p>
+                            <p class="m-0" ng-if="!ifscCodeDetails.bank_name">
+                                -
+                            </p>
                         </div>
                     </div>
 
@@ -190,8 +197,10 @@
                             <span class="fw-semibold"> State </span>
                         </div>
                         <div class="col-12 col-md-8">
-                            <p class="m-0" ng-if="bankState">{{bankState}}</p>
-                            <p class="m-0" ng-if="!bankState">-</p>
+                            <p class="m-0" ng-if="ifscCodeDetails.state">
+                                {{ifscCodeDetails.state}}
+                            </p>
+                            <p class="m-0" ng-if="!ifscCodeDetails.state">-</p>
                         </div>
                     </div>
 
@@ -201,8 +210,10 @@
                             <span class="fw-semibold"> Branch </span>
                         </div>
                         <div class="col-12 col-md-8">
-                            <p class="m-0" ng-if="bankBranch">{{bankBranch}}</p>
-                            <p class="m-0" ng-if="!bankBranch">-</p>
+                            <p class="m-0" ng-if="ifscCodeDetails.branch">
+                                {{ifscCodeDetails.branch}}
+                            </p>
+                            <p class="m-0" ng-if="!ifscCodeDetails.branch">-</p>
                         </div>
                     </div>
 
@@ -212,17 +223,19 @@
                             <span class="fw-semibold"> IFSC Code </span>
                         </div>
                         <div class="col-12 col-md-8">
-                            <p class="m-0" ng-if="bankIFSCCode">
-                                {{bankIFSCCode}}
+                            <p class="m-0" ng-if="ifscCodeDetails.ifsc_code">
+                                {{ifscCodeDetails.ifsc_code}}
                             </p>
-                            <p class="m-0" ng-if="!bankIFSCCode">-</p>
+                            <p class="m-0" ng-if="!ifscCodeDetails.ifsc_code">
+                                -
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- Add New Agency -->
             <div class="d-flex align-items-center justify-content-center">
-                <button class="btn btn-dark searchBtn fw-semibold mt-3">
+                <button class="btn btn-dark searchBtn fw-semibold mt-3" ng-click="addNewAgency()">
                     ADD NEW AGENCY
                 </button>
             </div>
@@ -239,7 +252,11 @@
                         >Bank Ac No:</label
                     >
                     <div class="">
-                        <input type="text" class="form-control" />
+                        <input
+                            type="text"
+                            class="form-control"
+                            ng-model="editBankAcNoSearch"
+                        />
                     </div>
                     <button
                         class="btn btn-dark searchBtn text-nowrap fw-semibold"
