--- a/other_bills_task/client/assets/css/app.scss
+++ b/other_bills_task/client/assets/css/app.scss
@@ -15,7 +15,7 @@
     background-color: #4d6273 !important;
 }
 
-.addAgencyTitle {
+.title {
     background-color: #cee5ff !important;
     color: #2261b2 !important;
 }
