--- a/other_bills_task/client/views/addAgency.html
+++ b/other_bills_task/client/views/addAgency.html
@@ -1,5 +1,5 @@
 <div class="bg-white p-2 rounded-1">
-    <div class="addAgencyTitle p-2 rounded-0 m-0">
+    <div class="title p-2 rounded-0 m-0">
         <p class="m-0 fw-bold">ADD OTHER ESTABLISHMENT AGENCY</p>
     </div>
 
@@ -13,7 +13,8 @@
                     name="flexRadioDefault"
                     id="flexRadioDefault2"
                     value="AddAgency"
-                    ng-model="type"
+                    ng-model="radioSelect"
+                    ng-click="clearData()"
                 />
                 <label class="form-check-label" for="flexRadioDefault2">
                     Add Single Agency
@@ -26,7 +27,8 @@
                     name="flexRadioDefault"
                     id="flexRadioDefault1"
                     value="EditAgency"
-                    ng-model="type"
+                    ng-model="radioSelect"
+                    ng-click="clearData()"
                 />
                 <label class="form-check-label" for="flexRadioDefault1">
                     Edit Single Agency
@@ -35,7 +37,7 @@
         </div>
 
         <!-- Add Agency -->
-        <div id="addAgency" ng-if="type=='AddAgency'" class="mt-3">
+        <div id="addAgency" ng-if="radioSelect=='AddAgency'" class="mt-3">
             <div class="warning p-2">
                 You can see agency status report for the agencies you have added
                 in Reports => Agencies Details report
@@ -59,11 +61,11 @@
                             type="text"
                             class="form-control"
                             id="agencyName"
-                            ng-model="addAgency.name"
+                            ng-model="addAgency.agency_name"
                         />
                         <p
                             class="text-danger"
-                            ng-repeat="error in errors.agencyName"
+                            ng-repeat="error in errors.agency_name"
                         >
                             {{error}}
                         </p>
@@ -81,14 +83,15 @@
                     </div>
                     <div class="col-12 col-md-8">
                         <input
-                            type="text"
+                            type="password"
                             class="form-control"
                             id="bankAcNo"
-                            ng-model="addAgency.accountNumber"
+                            ng-model="addAgency.account_number"
+                            ng-blur="checkAccountNumber()"
                         />
                         <p
                             class="text-danger"
-                            ng-repeat="error in errors.bankAcNo"
+                            ng-repeat="error in errors.account_number"
                         >
                             {{error}}
                         </p>
@@ -109,11 +112,11 @@
                             type="text"
                             class="form-control"
                             id="confirmBankAcNo"
-                            ng-model="addAgency.confirmAccountNumber"
+                            ng-model="addAgency.confirm_account_number"
                         />
                         <p
                             class="text-danger"
-                            ng-repeat="error in errors.confirmBankAcNo"
+                            ng-repeat="error in errors.confirm_account_number"
                         >
                             {{error}}
                         </p>
@@ -132,11 +135,11 @@
                             type="text"
                             class="form-control"
                             id="gstNumber"
-                            ng-model="addAgency.gstNo"
+                            ng-model="addAgency.gst_no"
                         />
                         <p
                             class="text-danger"
-                            ng-repeat="error in errors.gstNumber"
+                            ng-repeat="error in errors.gst_no"
                         >
                             {{error}}
                         </p>
@@ -158,10 +161,10 @@
                                     type="text"
                                     class="form-control"
                                     id="ifscCode"
-                                    ng-model="addAgency.ifscCode"
+                                    ng-model="addAgency.ifsc_code"
                                 />
                                 <button
-                                    ng-click="getIfscCodeDetails(addAgency.ifscCode)"
+                                    ng-click="getIfscCodeDetails(addAgency.ifsc_code)"
                                     class="btn btn-dark searchBtn ms-2"
                                 >
                                     Search
@@ -169,7 +172,7 @@
                             </div>
                             <p
                                 class="text-danger"
-                                ng-repeat="error in ifscCodeErrors"
+                                ng-repeat="error in errors.ifsc_code"
                             >
                                 {{error}}
                             </p>
@@ -235,44 +238,44 @@
             </div>
             <!-- Add New Agency -->
             <div class="d-flex align-items-center justify-content-center">
-                <button class="btn btn-dark searchBtn fw-semibold mt-3" ng-click="addNewAgency()">
+                <button
+                    class="btn btn-dark searchBtn fw-semibold mt-3"
+                    ng-click="addNewAgency()"
+                >
                     ADD NEW AGENCY
                 </button>
             </div>
         </div>
 
         <!-- Edit Agency -->
-        <div id="editAgency" ng-if="type=='EditAgency'" class="mt-3 p-2">
+        <div ng-show="radioSelect=='EditAgency'" class="mt-3 p-2">
             <div class="border rounded-2 col-12 col-md-10 col-lg-8 p-3">
                 <!-- Search Bank Ac No -->
                 <div
                     class="d-flex p-2 align-items-center gap-2 flex-wrap pb-5 border-bottom-dashed"
                 >
-                    <label for="editBankAcNo" class="fw-semibold"
-                        >Bank Ac No:</label
-                    >
-                    <div class="">
-                        <input
-                            type="text"
-                            class="form-control"
-                            ng-model="editBankAcNoSearch"
-                        />
+                    <label for="editBankAcNo" class="fw-semibold">
+                        Bank Ac No:
+                    </label>
+                    <div>
+                        <input type="text" class="form-control" ng-model="acNoSearch" />
                     </div>
                     <button
                         class="btn btn-dark searchBtn text-nowrap fw-semibold"
+                        ng-click="getAgency()"
                     >
                         SEARCH AGENCY
                     </button>
                 </div>
 
-                <div class="pb-2 border-bottom-dashed">
+                <div class="pb-2 border-bottom-dashed" ng-if="agencyFound">
                     <!-- Name -->
                     <div class="row p-2 align-items-center">
                         <div class="col-12 col-md-4">
                             <span class="fw-semibold"> Name </span>
                         </div>
                         <div class="col-12 col-md-8">
-                            <p class="m-0">{{agencyDetails.bankName}}</p>
+                            <p class="m-0">{{editAgency.agency_name}}</p>
                         </div>
                     </div>
 
@@ -282,7 +285,7 @@
                             <span class="fw-semibold"> Bank Ac No. </span>
                         </div>
                         <div class="col-12 col-md-8">
-                            <p class="m-0">{{agencyDetails.bankAcNo}}</p>
+                            <p class="m-0">{{editAgency.account_number}}</p>
                         </div>
                     </div>
 
@@ -292,22 +295,22 @@
                             <span class="fw-semibold"> IFSC: </span>
                         </div>
                         <div class="col-12 col-md-8">
-                            <p class="m-0">{{agencyDetails.ifscCode}}</p>
+                            <p class="m-0">{{editAgency.ifsc_code}}</p>
                         </div>
                     </div>
 
-                    <!-- IFSC -->
+                    <!-- PAN -->
                     <div class="row p-2 align-items-center">
                         <div class="col-12 col-md-4">
-                            <span class="fw-semibold"> PAN: </span>
+                            <span class="fw-semibold"> GST IN: </span>
                         </div>
                         <div class="col-12 col-md-8">
-                            <p class="m-0">{{agencyDetails.pan}}</p>
+                            <p class="m-0">{{editAgency.gst_no}}</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="">
+                <div class="" ng-if="agencyFound">
                     <!-- Agency Name -->
                     <div class="row mt-3 align-items-center">
                         <div class="col-12 col-md-4">
@@ -319,12 +322,11 @@
                             <input
                                 type="text"
                                 class="form-control"
-                                id="editAgencyName"
-                                ng-model="editAgency.agencyName"
+                                ng-model="editAgency.newAgencyName"
                             />
                             <p
                                 class="text-danger"
-                                ng-repeat="error in editErrors.agencyName"
+                                ng-repeat="error in errors.agency_name"
                             >
                                 {{error}}
                             </p>
@@ -343,11 +345,11 @@
                                 type="text"
                                 class="form-control"
                                 id="editGst"
-                                ng-model="editAgency.gst"
+                                ng-model="editAgency.newGstNo"
                             />
                             <p
                                 class="text-danger"
-                                ng-repeat="error in editErrors.gst"
+                                ng-repeat="error in errors.gst"
                             >
                                 {{error}}
                             </p>
@@ -367,25 +369,83 @@
                                     type="text"
                                     class="form-control"
                                     id="editIfscCode"
-                                    ng-model="editAgency.ifscCode"
+                                    ng-model="editAgency.newIfscCode"
                                 />
                                 <button
                                     class="btn btn-dark rounded-0 searchBtn ms-2"
+                                    ng-click="getIfscCodeDetails(editAgency.newIfscCode)"
                                 >
                                     Search
                                 </button>
                             </div>
                             <p
                                 class="text-danger"
-                                ng-repeat="error in editErrors.ifscCode"
+                                ng-repeat="error in errors.ifsc_code"
                             >
                                 {{error}}
                             </p>
                         </div>
                     </div>
+                    <div
+                        class="border p-3 mt-3"
+                        ng-if="ifscCodeDetails.ifsc_code"
+                    >
+                        <!-- Bank Name -->
+                        <div class="row p-2 align-items-center">
+                            <div class="col-12 col-md-4">
+                                <span class="fw-semibold"> Bank Name </span>
+                            </div>
+                            <div class="col-12 col-md-8">
+                                <p
+                                    class="m-0"
+                                    ng-if="ifscCodeDetails.bank_name"
+                                >
+                                    {{ifscCodeDetails.bank_name}}
+                                </p>
+                                <p
+                                    class="m-0"
+                                    ng-if="!ifscCodeDetails.bank_name"
+                                >
+                                    -
+                                </p>
+                            </div>
+                        </div>
 
+                        <!-- Bank State -->
+                        <div class="row p-2 align-items-center">
+                            <div class="col-12 col-md-4">
+                                <span class="fw-semibold"> State </span>
+                            </div>
+                            <div class="col-12 col-md-8">
+                                <p class="m-0" ng-if="ifscCodeDetails.state">
+                                    {{ifscCodeDetails.state}}
+                                </p>
+                                <p class="m-0" ng-if="!ifscCodeDetails.state">
+                                    -
+                                </p>
+                            </div>
+                        </div>
+
+                        <!-- Bank Branch -->
+                        <div class="row p-2 align-items-center">
+                            <div class="col-12 col-md-4">
+                                <span class="fw-semibold"> Branch </span>
+                            </div>
+                            <div class="col-12 col-md-8">
+                                <p class="m-0" ng-if="ifscCodeDetails.branch">
+                                    {{ifscCodeDetails.branch}}
+                                </p>
+                                <p class="m-0" ng-if="!ifscCodeDetails.branch">
+                                    -
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                     <div class="d-flex justify-content-center mt-3">
-                        <button class="btn btn-success fw-semibold">
+                        <button
+                            class="btn btn-success fw-semibold"
+                            ng-click="updateAgency()"
+                        >
                             UPDATE AGENCY
                         </button>
                     </div>
