--- a/other_bills_task/client/views/components/header.html
+++ b/other_bills_task/client/views/components/header.html
@@ -22,15 +22,15 @@
                 </button>
                 <button class="btn btn-secondary rounded-0">
                     <i class="fa-solid fa-home"></i>
-                    <p class="fw-light d-none d-md-inline">Modules</p>
+                    <p class="d-none d-md-inline">Modules</p>
                 </button>
                 <button class="btn btn-secondary rounded-0 d-none d-md-block">
                     <i class="fa-solid fa-user"></i>
-                    <p class="fw-light m-0 d-inline">Profile</p>
+                    <p class="m-0 d-inline">Profile</p>
                 </button>
                 <button class="btn btn-secondary rounded-0 d-none d-md-block">
                     <i class="fa-solid fa-sign-out"></i>
-                    <p class="fw-light m-0 d-inline">Logout</p>
+                    <p class="m-0 d-inline">Logout</p>
                 </button>
             </div>
             <div class="lastLogin text-white fs-7 ms-3 d-none d-md-block">
