--- a/other_bills_task/client/assets/css/app.css
+++ b/other_bills_task/client/assets/css/app.css
@@ -7,6 +7,10 @@
   font-size: 11px !important;
 }
 
+.smallText {
+  font-size: 14px !important;
+}
+
 .border-bottom-dashed {
   border-bottom: dashed 1px gray;
 }
@@ -15,9 +19,24 @@
   background-color: #4d6273 !important;
 }
 
+.warning {
+  background-color: #fcf8e3;
+  color: #936f14;
+  font-size: 14px;
+}
+
+.typesMenu {
+  background-color: #f9f9f9;
+  border: solid 1px rgba(180, 180, 180, 0.2901960784);
+}
+
 .title {
   background-color: #cee5ff !important;
   color: #2261b2 !important;
+}
+
+.bg-lightBlue {
+  background-color: #f5fafe !important;
 }
 
 .header {
@@ -76,4 +95,15 @@ body {
     width: calc(100% - 250px);
     margin-left: 250px;
   }
+}
+.searchBtn {
+  background-color: #0f3550;
+}
+
+.searchBtn:hover {
+  background-color: #22587d;
+}
+
+.searchBtn:active {
+  background-color: #38627e !important;
 }
