--- a/other_bills_task/client/assets/css/app.scss
+++ b/other_bills_task/client/assets/css/app.scss
@@ -6,6 +6,9 @@
 .fs-7 {
     font-size: 11px !important;
 }
+.smallText {
+    font-size: 14px !important;
+}
 
 .border-bottom-dashed {
     border-bottom: dashed 1px gray;
@@ -15,9 +18,24 @@
     background-color: #4d6273 !important;
 }
 
+.warning {
+    background-color: #fcf8e3;
+    color: #936f14;
+    font-size: 14px;
+}
+
+.typesMenu {
+    background-color: #f9f9f9;
+    border: solid 1px #b4b4b44a;
+}
+
 .title {
     background-color: #cee5ff !important;
     color: #2261b2 !important;
+}
+
+.bg-lightBlue {
+    background-color: #f5fafe !important;
 }
 
 .header {
@@ -88,4 +106,14 @@ body {
             margin-left: 250px;
         }
     }
+}
+
+.searchBtn {
+    background-color: #0f3550;
+}
+.searchBtn:hover {
+    background-color: #22587d;
+}
+.searchBtn:active {
+    background-color: #38627e !important;
 }
