--- a/other_bills_task/client/views/addAgency.html
+++ b/other_bills_task/client/views/addAgency.html
@@ -5,7 +5,7 @@
 
     <div class="form p-2 mt-2">
         <!-- Options -->
-        <div class="d-flex gap-3 p-2 col-12 col-md-10 col-lg-8 addMenu rounded">
+        <div class="d-flex gap-3 p-2 col-12 col-md-10 col-lg-8 typesMenu rounded">
             <div class="form-check">
                 <input
                     class="form-check-input"
@@ -455,23 +455,5 @@
     </div>
 </div>
 
-<style>
-    .addMenu {
-        background-color: #f9f9f9;
-        border: solid 1px #b4b4b44a;
-    }
-    .warning {
-        background-color: #fcf8e3;
-        color: #936f14;
-        font-size: 14px;
-    }
-    .searchBtn {
-        background-color: #0f3550;
-    }
-    .searchBtn:hover {
-        background-color: #22587d;
-    }
-    .searchBtn:active {
-        background-color: #38627e !important;
-    }
+<style>    
 </style>
