--- a/other_bills_task/client/assets/css/app.scss
+++ b/other_bills_task/client/assets/css/app.scss
@@ -74,8 +74,9 @@ body {
         }
     }
     .content {
-        width: calc(100% - 250px);
-        margin-left: 250px;
+        width: calc(100% - 260px);
+        margin: 10px;
+        margin-left: 260px;
         transition: all ease 0.5s;
     }
 }
