--- a/other_bills_task/client/assets/css/app.scss
+++ b/other_bills_task/client/assets/css/app.scss
@@ -9,7 +9,6 @@
 .smallText {
     font-size: 14px !important;
 }
-
 .border-bottom-dashed {
     border-bottom: dashed 1px gray;
 }
@@ -117,4 +116,33 @@ body {
 }
 .searchBtn:active {
     background-color: #38627e !important;
+}
+
+@media print {
+    @media print {
+		body * {
+			visibility: hidden;
+		}
+		.modal-content * {
+			visibility: visible;
+			overflow: visible;
+		}
+		.main-page * {
+			display: none;
+		}
+		.modal {
+			position: absolute;
+			left: 0;
+			top: 0;
+			margin: 0;
+			padding: 0;
+			min-height: 550px;
+			visibility: visible;
+			overflow: visible !important; /* Remove scrollbar for printing. */
+		}
+		.modal-dialog {
+			visibility: visible !important;
+			overflow: visible !important; /* Remove scrollbar for printing. */
+		}
+	}
 }
