--- a/other_bills_task/client/views/addAgency.html
+++ b/other_bills_task/client/views/addAgency.html
@@ -1,4 +1,4 @@
-<div class="bg-white p-2 rounded-1">
+<div class="bg-white rounded-1">
     <div class="title p-2 rounded-0 m-0">
         <p class="m-0 fw-bold">ADD OTHER ESTABLISHMENT AGENCY</p>
     </div>
