--- a/other_bills_task/client/assets/css/app.scss
+++ b/other_bills_task/client/assets/css/app.scss
@@ -9,8 +9,9 @@
 .smallText {
     font-size: 14px !important;
 }
-.border-bottom-dashed {
+.border-top-bottom-dashed {
     border-bottom: dashed 1px gray;
+    border-top: dashed 1px gray;
 }
 
 .btn-secondary {
