--- a/other_bills_task/client/views/components/otherBill.html
+++ b/other_bills_task/client/views/components/otherBill.html
@@ -83,9 +83,7 @@
             </div>
         </div>
         <div class="row m-0 py-2 mt-2" ng-show="formType">
-            <div class="col-12 col-md-6 col-lg-5 fw-semibold">
-                Search By:
-            </div>
+            <div class="col-12 col-md-6 col-lg-5 fw-semibold">Search By:</div>
             <div
                 class="col-12 col-md-6 col-lg-7 p-0 d-flex align-items-center typesMenu p-2 rounded gap-2"
             >
@@ -150,6 +148,7 @@
                         type="text"
                         ng-model="agencyAcNo"
                         class="form-control"
+                        onkeypress="alphaNumericOnly(event)"
                     />
                     <button
                         class="btn btn-dark searchBtn"
@@ -254,8 +253,8 @@
                         <span class="text-danger">*</span>
                     </label>
                     <small class="d-block fs-7">
-                        (Any Amount added in PT Dedn will be credited to
-                        DDO's account)
+                        (Any Amount added in PT Dedn will be credited to DDO's
+                        account)
                     </small>
                 </div>
                 <div class="col-12 col-md-6 col-lg-7 p-0">
@@ -284,8 +283,8 @@
                         <span class="text-danger">*</span>
                     </label>
                     <small class="d-block fs-7">
-                        (Any Amount added in TDS(IT) will be credited to
-                        DDO's account)
+                        (Any Amount added in TDS(IT) will be credited to DDO's
+                        account)
                     </small>
                 </div>
                 <div class="col-12 col-md-6 col-lg-7 p-0">
@@ -314,8 +313,8 @@
                         <span class="text-danger">*</span>
                     </label>
                     <small class="d-block fs-7">
-                        (Any Amount added in GST will be credited to
-                        DDO's account)
+                        (Any Amount added in GST will be credited to DDO's
+                        account)
                     </small>
                 </div>
                 <div class="col-12 col-md-6 col-lg-7 p-0">
@@ -370,9 +369,8 @@
                         <span class="text-danger">*</span>
                     </label>
                     <small class="d-block fs-7">
-                        (Any Amount added in Telangana Haritha Nidhi
-                        will be credited to Telangana Haritha Nidhi
-                        Account)
+                        (Any Amount added in Telangana Haritha Nidhi will be
+                        credited to Telangana Haritha Nidhi Account)
                     </small>
                 </div>
                 <div class="col-12 col-md-6 col-lg-7 p-0">
@@ -405,13 +403,8 @@
 
             <hr />
 
-            <div
-                class="d-flex align-items-center justify-content-center"
-            >
-                <button
-                    class="btn searchBtn btn-dark"
-                    ng-click="addAgency()"
-                >
+            <div class="d-flex align-items-center justify-content-center">
+                <button class="btn searchBtn btn-dark" ng-click="addAgency()">
                     ADD
                 </button>
             </div>
@@ -421,9 +414,7 @@
     <div class="" ng-show="agencyList.length > 0">
         <!-- Agency List Table -->
         <div class="my-3">
-            <div
-                class="d-flex justify-content-between mb-2 align-items-center"
-            >
+            <div class="d-flex justify-content-between mb-2 align-items-center">
                 <h6 class="m-0 fw-bolder">AGENCY/EMPLOYEE LIST</h6>
                 <button class="btn btn-success">
                     <i class="fas fa-print"></i>
@@ -452,10 +443,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr
-                            ng-repeat="agency in agencyList"
-                            class="smallText"
-                        >
+                        <tr ng-repeat="agency in agencyList" class="smallText">
                             <td>{{$index+1}}</td>
                             <td>{{agency.agency_name}}</td>
                             <td>{{agency.agency_bank_name}}</td>
@@ -538,20 +526,12 @@
                         id="headOfAccount"
                         class="form-select"
                     >
-                        <option value="" hidden>
-                            Select an Option
-                        </option>
-                        <option
-                            value="{{hoa.hoa}}"
-                            ng-repeat="hoa in hoas"
-                        >
+                        <option value="">Select an Option</option>
+                        <option value="{{hoa.hoa}}" ng-repeat="hoa in hoas">
                             {{hoa.hoa}}
                         </option>
                     </select>
-                    <p
-                        class="text-danger m-0"
-                        ng-repeat="error in errors.hoa"
-                    >
+                    <p class="text-danger m-0" ng-repeat="error in errors.hoa">
                         {{error}}
                     </p>
                 </div>
@@ -573,8 +553,8 @@
                         id="referenceNumber"
                     />
                     <small class="fs-7"
-                        >* Enter phoneno of telephone bill, Water can
-                        number of water bill. etc..</small
+                        >* Enter phoneno of telephone bill, Water can number of
+                        water bill. etc..</small
                     >
                     <p
                         class="text-danger m-0"
@@ -626,10 +606,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr
-                            ng-repeat="item in scrutinyItems"
-                            class="smallText"
-                        >
+                        <tr ng-repeat="item in scrutinyItems" class="smallText">
                             <td>{{$index+1}}</td>
                             <td>{{item.desc}}</td>
                             <td>
@@ -716,9 +693,7 @@
                                     >
                                         <div class="left">
                                             <p class="m-0">
-                                                <i
-                                                    class="fas fa-file"
-                                                ></i>
+                                                <i class="fas fa-file"></i>
                                                 {{attachment.name}}
                                             </p>
                                             <p class="m-0 text-warning">
@@ -743,25 +718,39 @@
         </div>
 
         <!-- OTP Generate -->
-        <div class="d-flex">
-            <div class="">
-                <select
-                    name=""
-                    class="form-select shadow-none rounded-0"
-                    id=""
-                >
-                    <option value="">Select Phone Number</option>
-                </select>
+        <div class="" ng-hide="otpVerified">
+            <div class="d-flex gap-3">
+                <div class="">
+                    <select name="" class="form-select shadow-none rounded-0" id="">
+                        <option value="">Select Phone Number</option>
+                    </select>
+                </div>
+                <button class="btn btn-success btn-sm" ng-click="showOtp=true">
+                    GENERATE OTP
+                </button>
             </div>
-            <button class="btn btn-success btn-sm">GENERATE OTP</button>
+            <div class="d-flex gap-3">
+                <div class="">
+                    <input
+                        type="text"
+                        ng-show="showOtp"
+                        value="12345"
+                        placeholder="OTP..."
+                        class="form-control mt-3"
+                    />
+                </div>
+                <button ng-show="showOtp" class="btn btn-success btn-sm mt-2" ng-click="verifyOtp()">
+                    Verify
+                </button>
+            </div>
+        </div>
+        <div class="text-success" ng-show="otpVerified">
+            Otp Verified
         </div>
 
         <hr />
         <div class="d-flex align-items-center justify-content-center">
-            <button
-                class="btn btn-dark searchBtn"
-                ng-click="submitBill()"
-            >
+            <button class="btn btn-dark searchBtn" ng-click="submitBill()">
                 SUBMIT BILL
             </button>
         </div>
