--- a/other_bills_task/client/views/home.html
+++ b/other_bills_task/client/views/home.html
@@ -1,5 +1,5 @@
-<div class="bg-white p-2 rounded-1">
+<div class="rounded-1">
     <div class="title p-2 rounded-0 m-0">
-        <p class="m-0 fw-bold">ADD OTHER ESTABLISHMENT AGENCY</p>
+        <p class="m-0 fw-bold">Home</p>
     </div>
 </div>
